RESOLVED FIXED297192
[GTK][WPE] error: reference to type 'const WebCore::Style::PositionY' requires an initializer after 298460@main
https://bugs.webkit.org/show_bug.cgi?id=297192
Summary [GTK][WPE] error: reference to type 'const WebCore::Style::PositionY' require...
Fujii Hironori
Reported 2025-08-10 01:43:11 PDT
[GTK][WPE] error: reference to type 'const WebCore::Style::PositionY' requires an initializer after 298460@main After 298460@main, Combination of Clang and libstdc++ can't compile WebKit. https://webkit.slack.com/archives/CU64U6FDW/p1754723550222259 https://pastebin.com/cLZTNW2V Buildbot: builder GTK-Linux-64-bit-Release-Clang-Build build 18818 https://build.webkit.org/#/builders/629/builds/18818 In file included from /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/WebKitBuild/GTK/Release/WTF/Headers/wtf/StdLibExtras.h:36: In file included from /usr/lib/gcc/x86_64-linux-gnu/14/../../../../include/c++/14/functional:53: /usr/lib/gcc/x86_64-linux-gnu/14/../../../../include/c++/14/tuple:199:9: error: reference to type 'const WebCore::Style::PositionY' requires an initializer 199 | : _M_head_impl() { } | ^ /usr/lib/gcc/x86_64-linux-gnu/14/../../../../include/c++/14/tuple:563:9: note: in instantiation of member function 'std::_Head_base<1, const WebCore::Style::PositionY &>::_Head_base' requested here 563 | : _Base() { } | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:45:36: note: in instantiation of member function 'std::_Tuple_impl<1, const WebCore::Style::PositionY &>::_Tuple_impl' requested here 45 | = KeywordsList::isValidKeyword(Keyword()) && PrimitiveKeyword<Keyword>; | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:45:7: note: while substituting template arguments into constraint expression here 45 | = KeywordsList::isValidKeyword(Keyword()) && PrimitiveKeyword<Keyword>; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/values/primitives/StyleLengthWrapper.h:68:23: note: while checking the satisfaction of concept 'ValidKeywordForList<std::_Tuple_impl<1, const WebCore::Style::PositionY &>, WebCore::CSS::PrimitiveKeywordList<>>' requested here 68 | LengthWrapperBase(CSS::ValidKeywordForList<Keywords> auto keyword) : m_value(Keywords::offsetForKeyword(keyword)) { } | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/values/primitives/StyleLengthWrapper.h:68:23: note: while substituting template arguments into constraint expression here 68 | LengthWrapperBase(CSS::ValidKeywordForList<Keywords> auto keyword) : m_value(Keywords::offsetForKeyword(keyword)) { } | ^~~~~~~~~~~~~~~~~~~~~~~~ /usr/lib/gcc/x86_64-linux-gnu/14/../../../../include/c++/14/tuple:326:7: note: (skipping 8 contexts in backtrace; use -ftemplate-backtrace-limit=0 to see all) 326 | _Tuple_impl(_Tuple_impl&&) = default; | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/WebKitBuild/GTK/Release/WTF/Headers/wtf/StdLibExtras.h:1354:20: note: in instantiation of function template specialization 'WTF::detail::tuple_zip_impl<const WebCore::Style::Position &, const WebCore::Style::Position &, 0UL, 1UL>' requested here 1354 | return detail::tuple_zip_impl<Head, Tail...>( | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/values/StyleValueTypes.h:862:13: note: in instantiation of function template specialization 'WTF::tuple_zip<const WebCore::Style::Position &, const WebCore::Style::Position &>' requested here 862 | }, WTF::tuple_zip(a, b)); | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/values/StyleValueTypes.h:951:16: note: in instantiation of function template specialization 'WebCore::Style::equalsForBlendingOnTupleLike<WebCore::Style::Position>' requested here 951 | return equalsForBlendingOnTupleLike(a, b, aStyle, bStyle); | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/StyleInterpolationWrappers.h:144:16: note: in instantiation of function template specialization 'WebCore::Style::EqualsForBlendingInvoker::operator()<WebCore::Style::Position>' requested here 144 | return Style::equalsForBlending(this->value(from), this->value(to), from, to); | ^ /buildbot-worker/work/GTK-Linux-64-bit-Release-Clang-Build/build/Source/WebCore/style/StyleInterpolationWrappers.h:130:7: note: in instantiation of member function 'WebCore::Style::Interpolation::StyleTypeWrapper<WebCore::Style::Position, const WebCore::Style::Position &, WebCore::Style::Position &&>::equals' requested here 130 | class StyleTypeWrapper : public WrapperBase { | ^
Attachments
Fujii Hironori
Comment 1 2025-08-10 01:48:25 PDT
EWS
Comment 2 2025-08-10 15:28:10 PDT
Committed 298491@main (4ebc245e2259): <https://commits.webkit.org/298491@main> Reviewed commits have been landed. Closing PR #49196 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-08-10 15:29:13 PDT
Note You need to log in before you can comment on or make changes to this bug.