REGRESSION(298460@main): [CSS][Clang+libstdc++] error: reference to type 'const WebCore::Style::PositionY' requires an initializer https://bugs.webkit.org/show_bug.cgi?id=297192

Reviewed by Sam Weinig.

After <https://commits.webkit.org/298460@main>, the combination of
Clang and libstdc++ couldn't compile WebKit.

> tuple:199:9: error: reference to type 'const WebCore::Style::PositionY' requires an initializer

The concept ValidKeywordForList should check Keyword is
PrimitiveKeyword before checking isValidKeyword.

* Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:

Canonical link: https://commits.webkit.org/298491@main